# tensor_parallel

./: LICENCE  README.md  benchmark.py  benchmark_pipeline.py  experiment_utils.py  markbench.py  parallel_attention.py  parallel_blocks.py  pipelineable_blocks.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  slicer_wrapper.ipynb  slicer_wrapper.py  slicer_wrapper_interface.py  slicer_wrapper_test.py  slicing_bloom.py  slicing_configs.py
.github/workflows/: check_style.yaml  python-publish.yml  run-tests.yaml  run_cpu_tests.yaml  update_package.yaml
examples/: training_flan-t5-xl.ipynb
notebooks/: gpipe.ipynb
petals_local_parallel/: __init__.py  all_to_all_communication_primitives.py  autoconfig.py  benchmark_manual.py  communications.py  slicer_wrapper.py  slicer_wrapper_interface.py  slicer_wrapper_test.py  slicer_wrapper_test_cpu.py  slicing_config.py  slicing_configs.py
src/: slicer_wrapper.py
src/tensor_parallel/: __init__.py  accelerate.py  autoconfig.py  aux_actions.py  communications.py  config.py  cross_device_ops.py  dispatch.py  factory.py  imports.py  legacy.py  per_device_tensors.py  pretrained_model.py  shard.py  sharding.py  slicer_wrapper.py  slicing_actions.py  slicing_configs.py  state_actions.py  tensor_parallel.py  tensor_parallel_configs.py  tensor_parallel_distributed.py  tensor_parallel_pretrained_model.py  training.py  utils.py  (+3 more)
tensor_parallel/: logging.py  slicer_wrapper.py  tensor_parallel.py
tests/: test_basic.py  test_factory.py  test_integration.py  test_legacy.py  test_lora.py  test_saving.py  test_transformers.py
