[metadata]
name = tensor_parallel
version = 1.0.4
author = Andrei Panferov and Yaroslav Lisnyak
author_email = yalisnyak@nes.com
description = Automatically shard your large model between multiple GPUs, works without torch.distributed
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BlackSamorez/tensor_parallel
project_urls =
    Bug Tracker = https://github.com/BlackSamorez/tensor_parallel/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    torch>=1.12
    transformers>=4.25.1
[options.extras_require]
dev =
    pytest==6.2.5
    pytest-forked
    pytest-asyncio==0.16.0
    accelerate==0.15.0
    black==22.3.0
    isort==5.10.1
    psutil

[options.packages.find]
where = src